Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Sat Sep 1 2012 Thunor <thunorsif@hotmail.com>
- Added the "selected-row" tag attribute to the table widget to enable
  selecting a default row on initialisation and refresh (the firing of
  signals can be prevented with "block-function-signals").
- Added multiple selection mode to the table widget and updated the
  envvar export functions and removeselected action to cope with it.
- Fixed linecutter: the parts array needed to be initialised to null.
- Disabled the exporting of the entire contents of a few widgets on a
  signal for performance reasons; these are/were the *_ALL variables.
- Stopped variables_export_all() from exporting autonamed variables as
  it's pointless and would affect performance; this must be a bug.
- Added support for the save action function to the table widget.

* Fri Aug 31 2012 Thunor <thunorsif@hotmail.com>
- Fixed the table widget's signal and action handling issues.
- Added "exported-column" support to the table widget.
- Added initial "selection-mode" support to the table widget but not yet
  multiple selection mode.

* Thu Aug 30 2012 Thunor <thunorsif@hotmail.com>
- Fixed an issue with hiding/showing widgets that are automatically
  wrapped inside a scrolled window or viewport inside a scrolled window
  not hiding/showing those additional components.
- Refactored the table widget.
- Added tag attribute and input file support to the table widget.

* Wed Aug 29 2012 Thunor <thunorsif@hotmail.com>
- Added listing of the built-in extra libraries to argument --version.
- Fixed working_directory not being initialised to NULL in terminal.
- Reduced minimum libvte requirements to 0.23.5 (thanks vovchik).
- Added scrolled window to the terminal so now it resizes properly.
- Modified the terminal so that when the user types exit or it is
  killed, its variable -- which contained the pid -- is reset to zero